# pokerstove

./: CMakeLists.txt
doc/: evaluation_code.md
doc/MY/: README.md  optimization.md
src/lib/: CMakeLists.txt
src/lib/pokerstove/penum/: CMakeLists.txt
src/lib/pokerstove/peval/: CMakeLists.txt
src/lib/pokerstove/util/: CMakeLists.txt
